--- a/OneDrive/Έγγραφα/NetBeansProjects/Authentication/src/main/java/com/mycompany/authentication/MainWindow.form
+++ b/OneDrive/Έγγραφα/NetBeansProjects/Authentication/src/main/java/com/mycompany/authentication/MainWindow.form
@@ -165,6 +165,9 @@
                 </Property>
                 <Property name="label" type="java.lang.String" value="Login"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton2">
               <Properties>
